crates/raeen-gpu/tests/snapshots/pm4_snapshot__cp_draw_dcb_scissor_halves_are_pinned.snap
---
source: crates/raeen-gpu/tests/pm4_snapshot.rs
expression: "hex_words(&build_cp_draw_dcb(64, 32, ScissorHalf::Left))"
---
0000: 0xc0016900
0001: 0x00000318
0002: 0x00000100
0003: 0xc0016900
0004: 0x0000031c
0005: 0x00000028
0006: 0xc0016900
0007: 0x000003b0
0008: 0x000fc01f
0009: 0xc0016900
0010: 0x0000008e
0011: 0x0000000f
0012: 0xc0066900
0013: 0x0000010f
0014: 0x42000000
0015: 0x42000000
0016: 0x41800000
0017: 0x41800000
0018: 0x3f800000
0019: 0x00000000
0020: 0xc0026900
0021: 0x0000000c
0022: 0x00000000
0023: 0x00200020
0024: 0xc0017900
0025: 0x00000242
0026: 0x00000011
0027: 0xc01b1034
0028: 0x00000000
0029: 0x00000000
0030: 0x00000000
0031: 0x00000000
0032: 0x00000000
0033: 0x00000000
0034: 0x00000000
0035: 0x00000000
0036: 0x00000000
0037: 0x00000000
0038: 0x00000000
0039: 0x00000000
0040: 0x00000000
0041: 0x00000000
0042: 0x00000000
0043: 0x00000000
0044: 0x00000000
0045: 0x00000000
0046: 0x00000000
0047: 0x00000000
0048: 0x00000000
0049: 0x00000000
0050: 0x00000000
0051: 0x00000000
0052: 0x00000000
0053: 0x00000000
0054: 0x00000000
0055: 0x00000000
0056: 0xc0261038
0057: 0x00000000
0058: 0x00000000
0059: 0x00000000
0060: 0x00000000
0061: 0x00000000
0062: 0x00000000
0063: 0x00000000
0064: 0x00000000
0065: 0x00000000
0066: 0x00000000
0067: 0x00000000
0068: 0x00000000
0069: 0x00000000
0070: 0x00000000
0071: 0x00000000
0072: 0x00000000
0073: 0x00000000
0074: 0x00000000
0075: 0x00000000
0076: 0x00000000
0077: 0x00000000
0078: 0x00000000
0079: 0x00000000
0080: 0x00000000
0081: 0x00000000
0082: 0x00000000
0083: 0x00000000
0084: 0x00000000
0085: 0x00000000
0086: 0x00000000
0087: 0x00000000
0088: 0x00000000
0089: 0x00000000
0090: 0x00000000
0091: 0x00000000
0092: 0x00000000
0093: 0x00000000
0094: 0x00000000
0095: 0x00000000
0096: 0xc0051010
0097: 0x00000003
0098: 0x00000000
0099: 0x00000000
0100: 0x00000000
0101: 0x00000000
0102: 0x00000000
